--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-alembic==1.12.0
 email_validate==1.1.2
 fastapi==0.103.2
 matplotlib==3.8.0
+motor==3.3.1
 polog==0.0.17
 pydantic==2.4.2
 python-dotenv==1.0.0
-SQLAlchemy==2.0.21
 uvicorn==0.23.2
